--- a/recipe-project/index.html
+++ b/recipe-project/index.html
@@ -8,8 +8,21 @@
     <title>Recipe Search</title>
 </head>
 <body>
-    <main></main>
-    <footer></footer>
-    <script src="js/script.js"></script>
+    <main>
+        <h1>Recipe Search</h1>
+        <p>Find over 2.3 million recipes!</p>
+
+        <form id="searchForm" name="searchbar">
+            <input id="searchInput" type="text" placeholder="Type a food or meal..." name="search">
+            <button id="searchButton" type="submit">Search</button>
+        </form>
+
+        <div id="results"></div>
+    </main>
+
+    <footer>
+        <p>WDD330 Final Project - Koh Takamasa</p>
+    </footer>
+    <script src="js/script.js" type="module"></script>
 </body>
 </html>
