more dynamic js

--- a/recipe-project/index.html
+++ b/recipe-project/index.html
@@ -25,7 +25,7 @@
     </main>
 
     <footer>
-        <p>WDD330 Final Project - Koh Takamasa</p>
+        <p>WDD330 Final Project - Koh Takamasa - <a href="https://www.edamam.com/">Edamam API</a></p>
     </footer>
     <script src="js/script.js" type="module"></script>
 </body>
