--- a/recipe-project/favorites.html
+++ b/recipe-project/favorites.html
@@ -6,23 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Recipe Search</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <title>Favorite Recipes</title>
 </head>
 
 <body>
     <main>
         <div class="container">
             <div class="main-head">
-                <h1 class="main-heading">Recipe Search</h1>
-                <span class="material-icons favorite-icon"><a href="favorites.html">star</a></span>
+                <h1 class="main-heading">Favorite Recipes</h1>
+                <span class="material-icons home-icon"><a href="index.html">home</a></span>
             </div>
-            <p class="main-description">Find over 2.3 million recipes!</p>
-
-            <form id="searchForm">
-                <input id="searchInput" type="text" placeholder="Enter a food or meal..." name="search">
-                <button id="searchButton" type="submit">Search</button>
-            </form>
 
             <div id="results"></div>
         </div>
