--- a/recipe-project/favorites.html
+++ b/recipe-project/favorites.html
@@ -26,7 +26,7 @@
     <footer>
         <p>&copy; WDD330 Final Project - Koh Takamasa - <a href="https://www.edamam.com/" target="_blank">Edamam API</a></p>
     </footer>
-    <script src="js/script.js" type="module"></script>
+    <script src="js/favorite.mjs" type="module"></script>
 </body>
 
 </html>
