recipe save done

--- a/recipe-project/favorites.html
+++ b/recipe-project/favorites.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Favorite Recipes</title>
 </head>
 
@@ -18,13 +17,13 @@
                 <h1 class="main-heading">Favorite Recipes</h1>
                 <span class="material-icons home-icon"><a href="index.html">home</a></span>
             </div>
-
             <div id="results"></div>
         </div>
     </main>
 
     <footer>
-        <p>&copy; WDD330 Final Project - Koh Takamasa - <a href="https://www.edamam.com/" target="_blank">Edamam API</a></p>
+        <p>&copy; WDD330 Final Project - Koh Takamasa - <a href="https://www.edamam.com/" target="_blank">Edamam API</a>
+        </p>
     </footer>
     <script src="js/favorite.mjs" type="module"></script>
 </body>
