--- a/recipe-project/index.html
+++ b/recipe-project/index.html
@@ -13,8 +13,8 @@
 <body>
     <main>
         <div class="container">
-                <h1 class="main-heading">Recipe Search</h1>
-                <span class="material-icons favorite-icon"><a href="favorites.html">star</a></span>
+            <h1 class="main-heading">Recipe Search</h1>
+            <span class="material-icons favorite-icon"><a href="favorites.html">star</a></span>
             <p class="main-description">Find over 2.3 million recipes!</p>
 
             <form id="searchForm">
@@ -27,7 +27,8 @@
     </main>
 
     <footer>
-        <p>&copy; WDD330 Final Project - Koh Takamasa - <a href="https://www.edamam.com/" target="_blank">Edamam API</a></p>
+        <p>&copy; WDD330 Final Project - Koh Takamasa - <a href="https://www.edamam.com/" target="_blank">Edamam API</a>
+        </p>
     </footer>
     <script src="js/script.mjs" type="module"></script>
 </body>
